# baremetal

./: .gitignore  Cargo.toml  README.md  mise.toml
dimming/: Cargo.toml  build.rs
dimming/src/: main.rs
eblinky/: Cargo.toml  build.rs
eblinky/src/: main.rs
oblinky/: Cargo.toml  build.rs
oblinky/src/: main.rs
