[package]
name = "dimming"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { version = "0.10.0", features = ["binary-info", "rp235xa", "time-driver"] }
embassy-time = "0.5.1"
panic-probe = "1.0.0"
