[package]
name = "eblinky"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["binary-info", "defmt", "rp235xa", "time-driver"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
