[package]
name = "blinky"
version = "1.0.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cyw43 = { version = "0.7.0", features = ["defmt"] }
cyw43-pio = "0.10.0"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-rp = { version = "0.10.0", features = ["binary-info", "defmt", "rp235xa", "time-driver"] }
embassy-time = { version = "0.5.1", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"
